--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
                 </div>
                 <div class="program__item">
                     <p>Первый блок:</p>
-                    <p>+</p>
+                    <p class="plusik">+</p>
                 </div>
                 <div class="program__item">
                     <p>Второй блок:</p>
-                    <p>+</p>
+                    <p class="plusik">+</p>
                 </div>
             </div>
         </div>
