--- a/index.html
+++ b/index.html
@@ -138,9 +138,66 @@
                         </ul>
                         <p>Стоимость 1 блока: 24990*</p>
                         <div class="tariffs__btn">Записаться</div>
+                    </div>
+                </div>
+            </div>
+            <h4 class="tariffs__skidka">*На курс есть доступная рассрочка. <span class="underline">Прочитайте условия для ее оформления</span></h4>
+        </div>
+        <div class="vraki">
+            <img src="./assets/img/cheburashka.png" alt="women">
+            <div class="vraki__txt">
+                <h2 class="vraki__txt__fl">После курса вы:</h2>
+                <div class="vraki__txt__mikros">
+                    <div class="vraki__txt__mikro">
+                        <h4 class="vraki__txt__mikro__big">1</h4>
+                        <p class="vraki__txt__mikro__wrld"><b>Сможете консультировать</b> по темам: личная жизнь, совместимость, финансы, поиск предназначения, здоровья и детского гороскопа. </p>
+                    </div>
+                    <div class="vraki__txt__mikro">
+                        <h4 class="vraki__txt__mikro__big">2</h4>
+                        <p class="vraki__txt__mikro__wrld">Будете <b>владеть навыками работы</b> в профессиональных астрологических программах</p>
+                    </div>
+                    <div class="vraki__txt__mikro">
+                        <h4 class="vraki__txt__mikro__big">3</h4>
+                        <p class="vraki__txt__mikro__wrld"><b>Отобьете стоимость обучения</b> за первые несколько месяцев и повысите осознанность и качество своей жизни</p>
+                    </div>
+                </div>
+                <a href="#" class="vraki__txt__review">осмотреть отзывы об обучении и результаты учеников</a>
+                <div class="btns">
+                    <div class="btns__wrp">
+                        <button class="btn">
+                            Перечень моих услуг
+                            <img src="./assets/img/strela.svg" alt="strela">
+                        </button>
+                        <button class="btn">
+                            Марафоны для вас
+                            <img src="./assets/img/strela.svg" alt="strela">
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer__wrap">
+            <div class="footer__all">
+                <div class="footer__left">
+                    <p class="footer__left__text">
+                        Анастасия Вячеславовна Шевченко
+                    </p>
+                    <img src="./assets/img/inst.svg" alt="instagram">
+                    <img src="./assets/img/tg.svg" alt="tg">
+                    <img src="./assets/img/whasap.svg" alt="whasup">
+                </div>
+                <div class="footer__center">
+                    <a href="#" class="beli">На главную</a>
+                    <a href="#" class="beli otkid">Design by @kemfetka / Verstka by @mfight or Miroslav Ahtamyanov</a>
+                </div>
+                <div class="footer__right">
+                    <a href="#" class="beli">Политика конфиденциальности</a>
+                    <a href="#" class="beli otkid">Связаться со мной</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
